field and spacing from tittle look different- fixed

--- a/packages/custom/icu/public/assets/css/_modal.scss
+++ b/packages/custom/icu/public/assets/css/_modal.scss
@@ -150,10 +150,11 @@
                 display: inline-block;
             }
             .selected {
-                margin-bottom: 10px;
+                display: inline-block;
+                margin-bottom: 20px;
             }
             .status {
-                height: 300px;
+                height:200px;
             }
             .status, .assign {
                 .form-control {
